# paleo-labels

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  __init__.py  _typos.toml  pyproject.toml  requirements.txt  run_app.py  verify_installation.py
.github/workflows/: autofix-dependabot.yaml  deptry-check.yaml  format-check.yaml  pyrefly-check.yaml  ty-check.yaml
.streamlit/: config.toml
assets/: paste_bin.py  systematics.py
assets/archive/: app.py  batch.py  collection_manager.py  database_queries.py  export_engine.py  paleobiology.py  relationships.py  schemas.py  simple_app.py  simple_storage.py  smart_data.py  storage.py
assets/claude_helper_files/: EXAMPLE_REPRODUCTIONS.md  FINAL_SUMMARY.md  LABEL_SAVE_SYSTEM_PLAN.md  QUICK_START.md  REFACTOR_CHECKLIST.md  REFACTOR_PLAN.md  REFACTOR_README.md  REFACTOR_SUMMARY.md
assets/claude_reproductions/: reproduce_examples.py
assets/claude_tests/: test_refactor.py
assets/example_label/: specimen.json  specimen_information.json
assets/label_example/: specimen.json
assets/label_examples/: references.bib  specimen.json  systematics.json
assets/misc/: decisions.md  design-decisions.md  dev-notes.md
assets/plans/: claude_2025-08-25.md  claude_plan_2025-08-24.md  plan_2025-08-24.md
assets/resources/: useful_links.md
assets/saved_images/: label_amnh.json  label_amnh.tex
assets/scripts/: convert_json_to_parquet.R  fetch_pbdb_data.R  original_fetch_pbdb_data.R
config/: default.toml
label_styles/: default_style.toml  label_style_03.toml
label_templates/: expedition.toml  locality.toml  specimen.toml  taxonomy.toml
labels/: branchiocarcinus_flectus.toml  collections_example.toml  displays_example.toml  eutrephoceras_dekayi.toml  expeditions_example.toml  locales_example.toml  plates_example.toml  species_taxonomic_example.toml  specimen_collection_example.toml  specimens_block_example.toml
measurement_background/: Makefile  background.md
notebooks/: copyable_text.py  example_config.toml  exp_w_args_order_gen.py  exp_w_pillow.py  experiment_with_args_ordering.py  experiment_with_use_of_pillow.py  label.tex  label3.py  make_label_for_squali.py  make_label_for_squali.qmd  mpl_text_plots.py  mpl_text_rescale.py  simple_collections_label.py  use_paleo_label.py  use_pdf_tools_to_rename_files.py
paleo_labels/: OLD_APP_NOTE.md  __init__.py  app.py  autocomplete.py  batch.py  collection_manager.py  database_queries.py  exports.py  templates.py  ultra_simple_app.py  ultra_simple_app_broken.py
paleo_utils/: __init__.py  fonts_utils.py  label.py  label2.py  label_utilities.py  utils.py
templates/: default_style.toml  expedition.toml  locality.toml  specimen.toml  taxonomy.toml
(+16 files in other folders)
