[project]
name = "paleo-labels"
version = "0.0.1"
authors = [
  {name = "AFg6K7h4fhy2", email = "127630341+AFg6K7h4fhy2@users.noreply.github.com"},
]
description = "paleo-labels is a package for writing precisely formatted labels for natural specimens and related items, such as collections and excursions."
readme = "README.md"
license = "Apache-2.0"
keywords = ["python", "geology", "paleontology", "chronostratigraphy", "package"]
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "streamlit>=1.45.1",
    "toml>=0.10.2",
]

[project.urls]
Repository = "https://github.com/AFg6K7h4fhy2/paleo-labels"
Issues = "https://github.com/AFg6K7h4fhy2/paleo-labels/issues"
"Author GitHub" = "https://github.com/AFg6K7h4fhy2/"


[tool.pyrefly]
search-path = ["paleo_labels"]
