[project]
name = "paleo-labels"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "paleo-labels is a package for writing precisely formatted labels for natural specimens and related items, such as collections and excursions."
readme = "README.md"
license = "Apache-2.0"
keywords = ["python", "geology", "paleontology", "chronostratigraphy", "package"]
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "platformdirs>=4.3.8",
    "polars>=1.32.3",
    "reportlab>=4.4.3",
    "streamlit>=1.45.1",
    "toml>=0.10.2",
]

[project.urls]
Repository = "https://github.com/O957/paleo-labels"
Issues = "https://github.com/O957/paleo-labels/issues"
"Author GitHub" = "https://github.com/O957/"

[tool.ty.environment]
root = ["./paleo_labels"]
