[project]
name = "paleo-labels"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "Paleo-Labels: A Python package for writing and formatting labels for geological, paleontological, and biological specimens and related items, such localities and expeditions."
readme = "README.md"
license = "Apache-2.0"
keywords = ["python", "geology", "paleontology", "package", "data-management", "geology", "paleobiology", "reportlab", "streamlit", "research-tools"]
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "reportlab>=4.4.3",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "tomli>=2.2.1",
]

[project.urls]
Repository = "https://github.com/O957/paleo-labels"
Issues = "https://github.com/O957/paleo-labels/issues"
"Author GitHub" = "https://github.com/O957/"

[tool.ty.environment]
root = ["./paleo_labels"]
